# Mini_CGAL

./: .clang-format  .gitignore  CMakeLists.txt  MiniCGAL_CudaDecompress.txt  Preformance.md  README.md  command.txt  main.cpp
CUDA_new/: CMakeLists.txt
CUDA_new/0_hello_world/: hello_world.cu
CUDA_new/14_global_variable/: global_variable.cu
CUDA_new/15_pine_memory/: pin_memory.cu
CUDA_new/16_zero_copy_memory/: zero_copy_memory.cu
CUDA_new/19_AoS/: AoS.cu
CUDA_new/20_SoA/: SoA.cu
CUDA_new/21_read_buffer/: CMakeLists.txt  ReadBuffer.cu
CUDA_new/23_sum_array_uniform_memory/: sum_arrays_uniform_memory.cu
CUDA_new/24_shared_memory_read_data/: shared_memory_read_data.cu
CUDA_new/26_transform_shared_memory/: transform_shared_memory.cu
CUDA_new/30_stream/: stream.cu
CUDA_new/3_sum_arrays/: sum_arrays.cu
CUDA_new/41_test_struct_pointer/: CMakeLists.txt  test_struct_pointer.cu  test_struct_pointer2.cu  test_struct_pointer3.cu  test_struct_pointer4.cu
CUDA_new/42_test_atomic/: CMakeLists.txt  atomic.cu
CUDA_new/43_thrust/: CMakeLists.txt  sort.cu
CUDA_new/4_sum_arrays_timer/: sum_arrays_timer.cu
CUDA_new/5_thread_index/: thread_index.cu
CUDA_new/7_device_information/: device_information.cu
CUDA_new/include/: freshman.h
MCGAL/Core/: ContextPool.cpp  Facet.cpp  Halfedge.cpp  Mesh.cpp  core.h  global.cpp  gmon.out
MCGAL/Core/include/: Configuration.h  ContextPool.h  Facet.h  Global.h  Halfedge.h  Mesh.h  Point.h  Vertex.h  core.h
MCGAL/Core_CUDA/: ContextPool.cu  Facet.cpp  Facet.cu  Halfedge.cpp  Halfedge.cu  Mesh.cpp  Mesh.cu  README.MD  Vertex.cpp  Vertex.cu  core.h  global.cpp  global.cu  global.h  gmon.out
MCGAL/Core_CUDA/include/: Configuration.cuh  Configuration.h  ContextPool.cuh  Facet.cuh  Facet.h  Halfedge.cuh  Halfedge.h  Mesh.cuh  Mesh.h  Vertex.cuh  Vertex.h  core.cuh  core.h  cuda_util.cuh  global.h
MCGAL_PPMC/: mymesh.cpp  mymesh.h  mymeshComp.cpp  mymeshDecomp.cpp
PPMC/: aab.h  configuration.h  mymesh.cpp  mymesh.h  mymeshComp.cpp  mymeshCompTests.cpp  mymeshDecomp.cpp  mymeshIO.cpp  util.h
PPMC/BATCH_PPMC/: DecompressTool.cu  DecompressTool.cuh  DecompressToolIO.cu  DecompressToolUtils.cu  cuda_functions.cu  cuda_functions.cuh  thrust_struct.cuh
PPMC/BATCH_PPMC_CPU/: DecompressTool.cpp  DecompressTool.h  DecompressToolIO.cpp  DecompressToolUtils.cpp  quickSort.cpp  quickSort.h  util.h
PPMC/BFS_PPMC/: himesh.cpp  himesh.h  himeshComp.cpp  himeshDecomp.cpp  himeshIO.cpp
PPMC/CGAL_PPMC/: configuration.h  himesh.cpp  himeshComp.cpp  himeshCompTests.cpp  himeshDecomp.cpp  himeshIO.cpp  himeshUtils.cpp  mymesh.h  mymeshComp.cpp  mymeshCompTests.cpp  mymeshUtils.cpp
PPMC/CUDA_PPMC/: cuda_function.cuh  himesh.cu  himesh.cuh  himeshComp.cu  himeshDecomp.cu  himeshIO.cu  mymesh.cu  mymeshComp.cu  mymeshDecomp.cu
PPMC/MCGAL_PPMC/: himesh.cpp  himesh.h  himeshComp.cpp  himeshDecomp.cpp  himeshIO.cpp  mymesh.cpp  mymesh.h  mymeshComp.cpp  mymeshDecomp.cpp  util.h
PPMC/MULTI_PPMC/: himesh.cpp  himesh.h  himeshComp.cpp  himeshDecomp.cpp  himeshIO.cpp
PPMC/NEW_PPMC/: himesh.cu  himesh.cuh  himeshComp.cu  himeshDecomp.cu  himeshIO.cu
PPMC_CUDA/: gmon.out  mymesh.cpp  mymesh.cu  mymesh.cuh  mymesh.h  mymeshDecomp.cpp  mymeshDecomp.cu  mymeshIO.cpp  mymeshIO.cu  util.h
bak/: BUG.md  CMakeLists.txt  README.md  READMEv2.md  mymeshDecomp.cu
scripts/: batch.sh  compress.sh  decompress.sh  mem.sh  output_nonunified1.csv  output_nonunified2.csv  output_unified.csv  run.sh
static/: buffer1  buffer2  bun_zipper.off  compressed_20.mesh.off  fixed.OFF  res.csv  untitled.off
tools/: BFSCompress_test.cpp  BatchDecompressCpuTest.cpp  BatchDecompress_test.cu  MCompress_test.cpp  MCudaCompress_test.cu  MCudaDecompress_test.cpp  MCudaDecompress_test.cu  MDecompress_test.cpp  MNewCompress_test.cu  MiniCGAL_test.cpp  MiniCompress.cpp  MultiCompress_test.cpp  PPMC_test.cpp  gmon.out  gprof2dot.py  test.cu
