cmake_minimum_required(VERSION 3.9 FATAL_ERROR)
Project(CUDA_Freshman CXX C CUDA)
set(CMAKE_CUDA_FLAGS "-arch=compute_35 -g -G -O3")
include_directories(./include)
add_subdirectory(0_hello_world)
add_subdirectory(3_sum_arrays)
add_subdirectory(4_sum_arrays_timer)
add_subdirectory(5_thread_index)
add_subdirectory(7_device_information)
add_subdirectory(24_shared_memory_read_data)
# add_subdirectory(1_check_dimension)