cmake_minimum_required(VERSION 3.9 FATAL_ERROR)
# Project(CUDA_Freshman CXX C CUDA)

# set(CMAKE_CUDA_COMPILER "/usr/local/cuda-12/bin/nvcc")
set(CMAKE_CUDA_COMPILER "/usr/local/cuda-12.2/bin/nvcc")

set(CMAKE_CUDA_FLAGS "-arch=compute_89 -code=sm_89 -g -G -O0")
set(CMAKE_BUILD_TYPE "Debug")
set(CUDA_DEBUG ON)
set(CMAKE_CUDA_FLAGS_DEBUG "-G -O0")

include_directories(./include)
add_subdirectory(0_hello_world)
add_subdirectory(3_sum_arrays)
add_subdirectory(4_sum_arrays_timer)
add_subdirectory(5_thread_index)
add_subdirectory(7_device_information)
add_subdirectory(24_shared_memory_read_data)
add_subdirectory(41_test_struct_pointer)
add_subdirectory(21_read_buffer)
# add_subdirectory(1_check_dimension)